# fastapi_directory

./: Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  Тестовое задание.docx
app/: main.py
app/api/: middleware.py
app/api/v1/: __init__.py  dependencies.py  org_router.py
app/core/: config.py  logger.py
app/database/: __init__.py  base.py  database.py  mixins.py
app/database/models/: activity.py  building.py  office.py  organization.py
app/repositories/: org_repo.py
app/schemas/: activity.py  building.py  org_response.py  organization.py
app/scripts/: seed.py
app/services/: org_service.py
migrations/: env.py
migrations/versions/: 6ab4e60ed2f1_initial_schema.py
