[project]
name = "restapi"
version = "0.1.0"
description = ""
authors = [
    {name = "zxc-dead-inside",email = "maks.arhipkin@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
